--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.AppBar {
+.top-header {
   padding: 5px;
-  font-size: 2em;
+  font-size: 1.4em;
 }
 
 .playerHand1 {
@@ -31,31 +31,40 @@
 .grid-container {
   margin-top: 70px;
   display: grid;
-  grid-template-rows: 80px 80px 160px 90px 160px 80px 80px;
+  grid-template-rows: 55px 10px 75px 150px 90px 150px 75px 10px 55px;
   grid-template-areas: 
-    ". .  .  .  h1 h1 h1 .  .  ."
-    ". a1 a1 a1 h1 h1 h1 .  .  ."
-    ". p1 p1 p1 p1 p1 p1 p1 .  ."
-    ". g  g  g  g  g  g  g  d  ."
-    ". p2 p2 p2 p2 p2 p2 p2 .  ."
-    ". .  h2 h2 h2 a2 a2 a2 . ."
-    ". .  h2 h2 h2 .  .  .  . .";
+    ". .  .  .  h1 h1 h1 h1 . ."
+    ". a1 a1 a1 h1 h1 h1 h1  . ."
+    ". a1 a1 a1 h1 h1 h1 h1 . ."
+    ". p1 p1 p1 p1 p1 p1 p1 . ."
+    ". g  g  g  g  g  g  g  d ."
+    ". p2 p2 p2 p2 p2 p2 p2 . ."
+    ". h2 h2 h2 h2 a2 a2 a2 . ."
+    ". h2 h2 h2 h2 a2 a2 a2  . ."
+    ". h2 h2 h2 h2 .  .  .  . .";
   grid-column-gap: 5px;
   grid-row-gap: 10px;
   justify-items: stretch;
   align-items: stretch;
+  
 }
 .grid-container > div {
   padding: 5px;
   border: 1px solid black;
+  border-radius: 3px;
 }
 .flex-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
 }
 .flex-container > div {
-  padding: 15px;
+  padding: 27px 20px;
+  margin: 2px;
+  flex: 1;
+  
   border: 1px solid black;
+  border-radius: 3px;
 }
 
