--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,44 @@
-.top-header {
+body {
+  background-color: #5a75ff;
+}
+div.top-header {
   padding: 5px;
   font-size: 1.4em;
+  background-color: #001167;
+  color: white;
 }
 
-.playerHand1 {
+.play-area {
+  background-color: #f7f8ff;
+}
+.player-1-hand {
   grid-area: h1;
 }
-.playerHand2 {
+.player-2-hand {
   grid-area: h2;
 }
-.playerActions1 {
+.player-1-actions {
   grid-area: a1;
 }
-.playerActions2 {
+.player-2-actions {
   grid-area: a2;
 }
-.playArea1 {
+.player-1-items {
   grid-area: p1;
 }
-.playArea2 {
+.player-2-items {
   grid-area: p2;
 }
-.geishaCards {
+.geisha-cards {
+  grid-area: g;
+  background-color: #001167;
+}
+.geishaCards > div {
   grid-area: g;
 }
-.drawPile {
+.draw-pile {
   grid-area: d;
+  background-color: #001167
 }
 
 .grid-container {
@@ -34,13 +47,13 @@
   grid-template-rows: 55px 10px 75px 150px 90px 150px 75px 10px 55px;
   grid-template-areas: 
     ". .  .  .  h1 h1 h1 h1 . ."
-    ". a1 a1 a1 h1 h1 h1 h1  . ."
+    ". a1 a1 a1 h1 h1 h1 h1 . ."
     ". a1 a1 a1 h1 h1 h1 h1 . ."
     ". p1 p1 p1 p1 p1 p1 p1 . ."
     ". g  g  g  g  g  g  g  d ."
     ". p2 p2 p2 p2 p2 p2 p2 . ."
     ". h2 h2 h2 h2 a2 a2 a2 . ."
-    ". h2 h2 h2 h2 a2 a2 a2  . ."
+    ". h2 h2 h2 h2 a2 a2 a2 . ."
     ". h2 h2 h2 h2 .  .  .  . .";
   grid-column-gap: 5px;
   grid-row-gap: 10px;
@@ -49,8 +62,8 @@
   
 }
 .grid-container > div {
-  padding: 5px;
-  border: 1px solid black;
+  padding: 1px;
+  border: 1px solid #dca9a9;
   border-radius: 3px;
 }
 .flex-container {
@@ -60,11 +73,10 @@
   text-align: center;
 }
 .flex-container > div {
-  padding: 27px 20px;
+  padding: 32px 0;
   margin: 2px;
   flex: 1;
-  
-  border: 1px solid black;
+  background-color: white;
   border-radius: 3px;
 }
 
