--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,15 @@ body {
   background-color: #5a75ff;
 }
 div.top-header {
-  padding: 5px;
-  font-size: 1.4em;
+  padding: 15px;
+  font-size: 1.6em;
   background-color: #001167;
   color: white;
 }
-
+.menu-icon {
+  float: right;
+  margin-right: 10px;
+}
 .play-area {
   background-color: #f7f8ff;
 }
